# YtoXHto2Z2B_analysis

./: .gitignore  README.md  pyproject.toml
condor/: run_background_job.sh  run_validation_job.sh  submit_background.sub  submit_validation.sub
configs/: background_samples.json  default.json
docs/: current_analysis_audit.md  nonresonant_root_reuse.md  reference.md  validation_summary.md
filelists/: test_hh4l_v15_onefile.txt  v12_data_test.txt  v12_hhbb4l_test.txt  v12_ttz_test.txt  v12_zz4l_background.txt  v12_zz4l_test.txt  v15_hhbb4l_test.txt  v15_yh_signal_100events.txt
scripts/: check_background_jobs.py  make_validation_plots.py  prepare_background_jobs.py  run_analysis.sh  submit_backgrounds.py  submit_validation.py
src/yhbbzz/: __init__.py  analysis.py  cli.py  hzz4l.py  jets.py  kinematics.py  ntuple.py  truth.py
tests/: test_hzz4l_schema.py  test_normalization.py  test_truth.py
