[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yhbbzz-analysis"
version = "0.1.0"
description = "Standalone X to YH, Y to bb, H to ZZ to 4l analysis"
requires-python = ">=3.9"

[project.scripts]
yhbbzz-run = "yhbbzz.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

